@@ -7,7 +7,12 @@ EXTRA_DIST = \
 	csvmode.awk \
 	csvmode.ok \
 	csvsplit.awk \
-	csvsplit.ok
+	csvsplit.ok \
+	csvdump.awk \
+	manyfields.in \
+	manyfields.ok \
+	nonascii.in \
+	nonascii.ok
 
 # Get rid of core files when cleaning and generated .ok file
 CLEANFILES = _* *_.png core core.* junk out1 out2 out3 test1 test2 seq *~
@@ -24,7 +29,7 @@ check:	test-msg-start mytests test-msg-end
 	@$(MAKE) pass-fail
 #	@$(MAKE) pass-fail || { $(MAKE) diffout; exit 1; }
 
-mytests: csv csvconvert csvmode csvsplit
+mytests: csv csvconvert csvmode csvsplit manyfields nonascii
 
 test-msg-start:
 	@echo "======== Starting csv tests ========"
@@ -50,4 +55,14 @@ csvconvert::
 csvsplit::
 	@echo $@
 	@$(AWK) -l csv -f $(srcdir)/$@.awk csv.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+manyfields::
+	@echo $@
+	@$(TEST_AWK) -l csv -f $(srcdir)/csvdump.awk $@.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+nonascii::
+	@echo $@
+	@$(TEST_AWK) -l csv -f $(srcdir)/csvdump.awk $@.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
