@@ -1,0 +1,74 @@
+<a,b,c>
+<a|b|c>
+1-<a>
+2-<b>
+3-<c>
+<a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z>
+<a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z|0|1|2|3|4|5|6|7|8|9|A|B|C|D|E|F|G|H|I|J|K|L|M|N|O|P|Q|R|S|T|U|V|W|X|Y|Z>
+1-<a>
+2-<b>
+3-<c>
+4-<d>
+5-<e>
+6-<f>
+7-<g>
+8-<h>
+9-<i>
+10-<j>
+11-<k>
+12-<l>
+13-<m>
+14-<n>
+15-<o>
+16-<p>
+17-<q>
+18-<r>
+19-<s>
+20-<t>
+21-<u>
+22-<v>
+23-<w>
+24-<x>
+25-<y>
+26-<z>
+27-<0>
+28-<1>
+29-<2>
+30-<3>
+31-<4>
+32-<5>
+33-<6>
+34-<7>
+35-<8>
+36-<9>
+37-<A>
+38-<B>
+39-<C>
+40-<D>
+41-<E>
+42-<F>
+43-<G>
+44-<H>
+45-<I>
+46-<J>
+47-<K>
+48-<L>
+49-<M>
+50-<N>
+51-<O>
+52-<P>
+53-<Q>
+54-<R>
+55-<S>
+56-<T>
+57-<U>
+58-<V>
+59-<W>
+60-<X>
+61-<Y>
+62-<Z>
+<p,q,r>
+<p|q|r>
+1-<p>
+2-<q>
+3-<r>
